# earthdata-download

./: .gitignore  README.md  pyproject.toml
docs/: prd.md
earthdata_download/src/: auth.py  cli.py  download.py  logger.py  query.py
earthdata_download/src/utils/: __init__.py
